<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="radio_group_tittle">CCAV survey: r u happy?</string>
    <string name="radio_group_button1">happy</string>
    <string name="radio_group_button2">unhappy</string>
    <string name="radio_group_button3">close u bullshit</string>
    <string name="check_box_tittle">whut u do @home</string>
    <string name="check_box_button1">play wow</string>
    <string name="check_box_button2">play wow!</string>
    <string name="check_box_button3">play wow u mother fncker!</string>
    <string name="title_activity_index_activity">index_activity</string>

</resources>
