<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00BBFF"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:background="#00BBFF">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSwitch"
                android:text="click me to switch to second activity"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAddContact1"
                android:text="Add an Contact 1"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnAddContact2"
                android:text="Add an Contact 2"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00FFBB"
                android:orientation="vertical">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etGoldMoney"
                    android:inputType="none"
                    android:hint="input the expected money to earn:"
                    android:layout_margin="10px"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="click me for $1"
                    android:background="#BBFF00"
                    android:layout_margin="10px"
                    android:id="@+id/btnGetMoney"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="click me for -$1 T_T"
                    android:background="#FF0000"
                    android:layout_margin="10dp"
                    android:id="@+id/btnLoseMoney"/>
                <TextView
                    android:text="haha, ive earned ... by clicking the button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0000FF"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:id="@+id/tvGetMoney"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FFFFFF"
                android:orientation="vertical">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_group_tittle"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rgCCAVSurvey">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbButton1"
                        android:text="@string/radio_group_button1"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbButton2"
                        android:text="@string/radio_group_button2"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbButton3"
                        android:text="@string/radio_group_button3"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#FFFFFF"
                android:orientation="vertical">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_tittle"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbButton1"
                    android:text="@string/check_box_button1"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbButton2"
                    android:text="@string/check_box_button2"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbButton3"
                    android:text="@string/check_box_button3"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

